# CosRay_FreeRTOS

./: .cproject  .gitignore  .pre-commit-config.yaml  .project  CMakeLists.txt  README.md  pyproject.toml  pytest_hello_world.py  requirements.txt  sdkconfig  setup.bat  setup.ps1  setup.sh
BSP/: bleprph.c  bleprph.h  bsp.c  bsp.h  dataprph.c  dataprph.h  test.c  test.h  typedefs.h
feature/BLE/main/: main.c
main/: CMakeLists.txt  bleprph.c  bleprph.h  config.h  main.c
